--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.4.2'
     implementation 'androidx.navigation:navigation-ui:2.4.2'
     implementation 'com.google.android.material:material:1.7.0-alpha01'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
 }
